fix(CSS): dialogs scrollbars were visible even when no overflow (Windows and Linux, or MacOS with optional "show always" system setting)

--- a/src/renderer/assets/styles/components/modals.css
+++ b/src/renderer/assets/styles/components/modals.css
@@ -68,7 +68,8 @@
 .modal_dialog_body {
   flex: 1;
   padding: 20px 30px;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   &.modal_dialog_body_centered {
     display: flex;
